0022048: Visualization, AIS_InteractiveContext - single object selection should always clear multiple selection

AIS_InteractiveContext::Select() now clears multiple selection when selecting a single object.